<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PlayUI"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <ImageButton
        android:id="@+id/balloon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@+id/Reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MaxLabel"
        app:srcCompat="@drawable/ic_balloon"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/TapsLabel"
        android:layout_width="82dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Taps"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Taps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maxnum" />

    <TextView
        android:id="@+id/maxnum"
        android:layout_width="82dp"
        android:layout_height="41dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Max"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/MaxLabel"
        app:layout_constraintEnd_toStartOf="@+id/TapsLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/MaxLabel"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="88dp"
        android:text="@string/zero"
        android:textSize="60sp"
        app:layout_constraintEnd_toStartOf="@+id/Taps"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/Taps"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="62dp"
        android:text="@string/zero"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/MaxLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="419dp"
        android:layout_marginBottom="76dp"
        android:text="@string/Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MaxLabel"
        tools:visibility="visible" />

    <Button
        android:id="@+id/Restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="419dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="76dp"
        android:text="@string/Restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Reset"
        app:layout_constraintTop_toBottomOf="@+id/Taps"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
