<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Instruction"
        android:layout_width="362dp"
        android:layout_height="75dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="60dp"
        android:text="@string/instruction"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tapnumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="516dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="67dp"
        android:text="@string/start"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/tapnumber"
        android:layout_width="233dp"
        android:layout_height="181dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="97dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/zero"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Instruction"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>